# react-ubiquitous-demo

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  api-specification.md  client-specification.md  composer.json  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml
composer/: .gitignore  README.md  docker-compose.yml
nuget/: README.md  react-ubiquitous-NuGet.sln
py/: README.md  pyproject.toml
py/.github/workflows/: publish.yml
py/src/react_ubiquitous_put/: flask_utils.py
py/tests/: test_models.py
scripts/: update-subtrees.sh
src/: App.tsx  ReactUbiquitousServiceProvider.php  index.css  main.tsx
src/Builders/: PageBuilder.php  StageBuilder.php
src/Contracts/: ElementConfigInterface.php  SectionConfigInterface.php
src/Enums/: ButtonSize.php  UITheme.php
src/components/: CategoryPage.tsx  ColorSwatch.tsx  ComponentDemo.tsx  TopBar.tsx
src/contexts/: ThemeContext.tsx
src/data/: blog.ts  charts.ts  dataDisplay.ts  disclosure.ts  feedback.ts  fields.ts  layout.ts  navigation.ts  overlays.ts
src/pages/: BlogPage.tsx  ChartsPage.tsx  CompletePage.tsx  DataDisplayPage.tsx  DisclosurePage.tsx  FeedbackPage.tsx  FieldsPage.tsx  LayoutPage.tsx  NavigationPage.tsx  OverlaysPage.tsx  ThemeGeneratorPage.tsx
src/react_ubiquitous_put/: __init__.py  builders.py  models.py
src/utils/: codeGen.ts
tests/: test_builders.py  test_new_models.py
tests/ReactUbiquitous.NuGet.Tests/: BuilderTests.cs  ReactUbiquitous.NuGet.Tests.csproj  SerializationTests.cs
(+165 files in other folders)
