[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "react-ubiquitous-py"
version = "1.0.1"
description = "Python package for @nssivanitesh/react-ubiquitous — typed config models and fluent builders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flask>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/react_ubiquitous_put"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
